Work-4 Done Fake It Till You Make It Added

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                 <figure class="fig">
                                     <img src="images/work-5.jpg" alt="">
                                     <figcaption>
-                                        <h3>Smart Wallet</h3>
+                                        <h3>Fake It Till You Make It</h3>
                                         <p>Digital </p>
                                     </figcaption>
                                 </figure>
