--- a/portfolio/work-4.html
+++ b/portfolio/work-4.html
@@ -79,8 +79,8 @@
         <div class="cont">
             <section class="portfolio-single type-3 top_90 row">
                 <div class="col-md-8 offset-md-2 text-center">
-                    <h1 class="title bottom_45 top_120">Smart Wallet</h1>
-                    <p class="bottom_30">For the photographers, one of the city's most intriguing traits is the pastel pink coloring of its buildings. "The first gates you see when you enter are pink," said Wong. "Once you're through, everything around you varies in different shades of the color from bright pinks to reddish browns.</p>
+                    <h1 class="title bottom_45 top_120">Fake It Till You Make It</h1>
+                    <p class="bottom_30">“You must be the person you have never had the courage to be. Gradually, you will discover that you are that person, but until you can see this clearly, you must pretend and invent.”<br><strong>― Paulo Coelho</strong></p>
                     <ul class="information">
                         <li><span>Client:</span> Narendra Modi</li>
                         <li><span>Website:</span> narendramodi.com</li>
@@ -92,6 +92,7 @@
                     <figure><img src="../images/portfolio/work-4/01.jpg" alt=""></figure>
                     <figure><img src="../images/portfolio/work-4/02.jpg" alt=""></figure>
                     <figure><img src="../images/portfolio/work-4/03.jpg" alt=""></figure>
+                    <figure><img src="../images/portfolio/work-4/04.jpg" alt=""></figure>
                 </div>
 
                 <div class="col-md-12 portfolio-nav text-center top_90">
