icon added to html home

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<meta name="description" content="Jeetu Bishwakarma Portfolio">
 	<meta name="keywords" content="personal, portfolio">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<link rel="icon" href="images/JBicon.png" type="image/x-icon" sizes="16x16">
+
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
