Title Changed to all Main Pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Jeetu Bishwakarma Portfolio</title>
+	<title>Jeetu Bishwakarma</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Jeetu Bishwakarma Portfolio">
 	<meta name="keywords" content="personal, portfolio">
