--- a/news.html
+++ b/news.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Jeetu Bishwakarma Portfolio</title>	
+	<title>My Blog</title>	
 	<meta charset="UTF-8">
 	<meta name="description" content="Jeetu Bishwakarma Portfolio">
 	<meta name="keywords" content="personal, portfolio">
