My Picture And Work Pic Updated

--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@
                 <a href="https://twitter.com/iLezend" target="_blank" class="twitter-account">@jeetubishwakarma</a>
             </section>
         </div> <!-- cont end -->
+        <div>
+            <img src="images/myPic.jpg" class="" style="border-radius: 50%;display: block; width: 20%; margin:25px auto;" alt="...">
+        </div>
     </div> <!-- wrapper end -->
 
     <footer>
