--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div id="particles-js"></div>
             <div class="home-content">
                 <h1 class="hero-title">Hello,<br><span>a bit about me:</span></h1>
-                <p class="top_45">I am a Web Designer & Video Editor and I am<br> designing <span class="element" data-text1="web interface." data-text2="branding identity." data-text3="logo and flyer." data-loop="true" data-backdelay="1500"></span></p>
+                <p class="top_45 her">I am a Motion Graphics & Web Designer and I am<br> Designing <span class="element" data-text1="web interface." data-text2="branding identity." data-text3="logo and flyer." data-loop="true" data-backdelay="1500"></span></p>
                 <div class="social">
                     <a class="text">social links</a>
                     <div class="line"></div>
@@ -270,8 +270,8 @@
     <script src="js/main.js"></script>
     <!-- for color alternatives -->
     <script src="js/jquery.cookie-1.4.1.min.js"></script>
-    <script src="js/Demo.js"></script>
-    <link rel="stylesheet" href="css/Demo.min.css" />
+     
+    
 
 </body>
 </html>
