--- a/news-big.html
+++ b/news-big.html
@@ -36,7 +36,7 @@
     
     <!-- HEADER -->
     <header>
-        <a href="index.html"><img src="images/logo.png" alt="Jeetu Bishwakarma Web Designer & Video Editor" style="width: 350px; height: 40px;"></a>
+        <a href="index.html"><img src="images/logo.svg" alt="Jeetu Bishwakarma Web Designer & Video Editor" style="width: 200px;"></a>
         <div class="nav-icon">
             <span></span>
             <span></span>
@@ -128,8 +128,8 @@
        <div class="cont">
             <div class="row">
                 <div class="col-md-4 col-sm-6 col-xs-12 copyright">
-                    <img src="images/logo.png" alt="" style="width: 320px; height: 37px;">
-                    <p>© 2018 Gorge Creative Agency</p>
+                    <img src="images/logo.svg" alt="" style="width: 200px;">
+                    <p>© 2020 Jeetu Bishwakarma</p>
                 </div>
                 <div class="col-md-4 d-sm-none d-md-block">
                     <div class="social">
