--- a/portfolio/work-4.html
+++ b/portfolio/work-4.html
@@ -36,7 +36,7 @@
     
     <!-- HEADER -->
     <header>
-        <a href="..\index.html"><img src="../images/logo.png" alt="" style="width: 350px; height: 40px;"></a>
+        <a href="..\index.html"><img src="../images/logo.svg" alt="" style="width: 200px;"></a>
         <div class="nav-icon">
             <span></span>
             <span></span>
